CHANGELOG

>>VERSION 17.9.7 HOTFIX
* Fixed a few crashes linked to null pointers.

>>VERSION 17.9.6 HOTFIX
* Fixed crash in altitude biomes linked to season changes
* Fixed wrong info in database generator
* Fixed bug with untranslated labels

>>VERSION 17.9.5
+ Added walrus lard and elephant meat. Now killing walruses, mammoths and elephants is more useful.
+ Added bronze chain armor and valyrian chain armor.
+ Added bronze nugget and iron nugget.
+ Added all the new items to the chest contents or trade entries.
+ Added werewolf sounds
+ Added new Massy biome, and renamed old to the "Massy Hills"

* Improved Russian & English translations
* Improved the wearing of levymans
* Improved the craft of valyrian armor. Now the armor is more valuable.
* Improved Blizzards' drops: 2-3 valyrian powders & 1 nugget per mob.
* Improved biome tree sets. Now no trees are available from creative only. Every tree can be found in the world.
* Improved database generator

* Optimized Seasons mechanics. 8x faster and 8x more stable (proved by maths expectation and variance)
* Optimized lots of places with enum maps

* Fixed bug with mammoth drops
* Fixed bug with rare walruses in cold coast
* Fixed a few bugs linked with wrongly selected season for the biome
* Fixed bug with grey fog around the shadows
* Fixed bug that made Red Clay the most rare mineral in the world
* Fixed bug with low number of ores in Iron Islands' Hills
* Fixed bug with elephants in Dorne
* Fixed bug with transparent pixel on the map
* Fixed bug with a new Essos waypoints

* Moved water effects from Ulthos to Yeen

- Removed Dorne Valley (no differences from Dorne)
- Removed item called valyrian mail, because new armor replaced that

>>VERSION 17.9.4
* Optimization
* Added more random structures
* Improved dragonstone biome
* Improved chest contents and trade entries
* Improved GUI
* Improved village paths
* Fixed bug with disappearing Dorne villages