@@ -7,79 +7,79 @@ import net.minecraft.item.ItemArmor.ArmorMaterial;
 import net.minecraftforge.common.util.EnumHelper;
 
 public class GOTMaterial {
-	public static ArmorMaterial ANONYMOUS = EnumHelper.addArmorMaterial("GOT_ANONYMOUS", 5, new int[] { 1, 3, 2, 1 }, 15);
-	public static ArmorMaterial ARRYN = EnumHelper.addArmorMaterial("GOT_ARRYN", 15, new int[] { 2, 6, 5, 2 }, 9);
-	public static ArmorMaterial ARRYNGUARD = EnumHelper.addArmorMaterial("GOT_ARRYNGUARD", 24, new int[] { 2, 7, 6, 3 }, 9);
-	public static ArmorMaterial ASSHAI = EnumHelper.addArmorMaterial("GOT_ASSHAI", 15, new int[] { 2, 6, 5, 2 }, 9);
-	public static ArmorMaterial BLACKFYRE = EnumHelper.addArmorMaterial("GOT_BLACKFYRE", 24, new int[] { 2, 7, 6, 3 }, 9);
-	public static ArmorMaterial BLACKSKIN = EnumHelper.addArmorMaterial("GOT_BLACKSKIN", 24, new int[] { 2, 7, 6, 3 }, 9);
-	public static ArmorMaterial BONE = EnumHelper.addArmorMaterial("GOT_BONE", 5, new int[] { 1, 3, 2, 1 }, 15);
-	public static ArmorMaterial BRAAVOS = EnumHelper.addArmorMaterial("GOT_BRAAVOS", 15, new int[] { 2, 6, 5, 2 }, 9);
+	public static ArmorMaterial ANONYMOUS = EnumHelper.addArmorMaterial("GOT_ANONYMOUS", 33, new int[] { 1, 3, 2, 1 }, 15);
+	public static ArmorMaterial ARRYN = EnumHelper.addArmorMaterial("GOT_ARRYN", 20, new int[] { 2, 6, 5, 2 }, 9);
+	public static ArmorMaterial ARRYNGUARD = EnumHelper.addArmorMaterial("GOT_ARRYNGUARD", 25, new int[] { 2, 7, 6, 3 }, 9);
+	public static ArmorMaterial ASSHAI = EnumHelper.addArmorMaterial("GOT_ASSHAI", 20, new int[] { 2, 6, 5, 2 }, 9);
+	public static ArmorMaterial BLACKFYRE = EnumHelper.addArmorMaterial("GOT_BLACKFYRE", 25, new int[] { 2, 7, 6, 3 }, 9);
+	public static ArmorMaterial BLACKSKIN = EnumHelper.addArmorMaterial("GOT_BLACKSKIN", 25, new int[] { 2, 7, 6, 3 }, 9);
+	public static ArmorMaterial BONE = EnumHelper.addArmorMaterial("GOT_BONE", 10, new int[] { 1, 3, 2, 1 }, 15);
+	public static ArmorMaterial BRAAVOS = EnumHelper.addArmorMaterial("GOT_BRAAVOS", 20, new int[] { 2, 6, 5, 2 }, 9);
 	public static ArmorMaterial BRONZE_CHAINMAIL = EnumHelper.addArmorMaterial("GOT_BRONZE_CHAINMAIL", 15, new int[] { 2, 4, 3, 1 }, 12);
 	public static ArmorMaterial BRONZE = EnumHelper.addArmorMaterial("GOT_BRONZE", 15, new int[] { 2, 5, 4, 1 }, 9);
-	public static ArmorMaterial CROWNLANDS = EnumHelper.addArmorMaterial("GOT_CROWNLANDS", 15, new int[] { 2, 6, 5, 2 }, 9);
-	public static ArmorMaterial DORNE = EnumHelper.addArmorMaterial("GOT_DORNE", 15, new int[] { 2, 6, 5, 2 }, 9);
-	public static ArmorMaterial DOTHRAKI = EnumHelper.addArmorMaterial("GOT_DOTHRAKI", 5, new int[] { 1, 3, 2, 1 }, 15);
-	public static ArmorMaterial DRAGONSTONE = EnumHelper.addArmorMaterial("GOT_DRAGONSTONE", 15, new int[] { 2, 6, 5, 2 }, 9);
-	public static ArmorMaterial FUR = EnumHelper.addArmorMaterial("GOT_FUR", 5, new int[] { 1, 3, 2, 1 }, 15);
-	public static ArmorMaterial GEMSBOK = EnumHelper.addArmorMaterial("GOT_GEMSBOK", 5, new int[] { 1, 3, 2, 1 }, 15);
-	public static ArmorMaterial GHISCAR = EnumHelper.addArmorMaterial("GOT_GHISCAR", 15, new int[] { 2, 6, 5, 2 }, 9);
-	public static ArmorMaterial GIFT = EnumHelper.addArmorMaterial("GOT_GIFT", 15, new int[] { 2, 6, 5, 2 }, 9);
-	public static ArmorMaterial GOLDENCOMPANY = EnumHelper.addArmorMaterial("GOT_GOLDENCOMPANY", 15, new int[] { 2, 6, 5, 2 }, 9);
-	public static ArmorMaterial HAND = EnumHelper.addArmorMaterial("GOT_HAND", 5, new int[] { 1, 3, 2, 1 }, 15);
-	public static ArmorMaterial HELMET = EnumHelper.addArmorMaterial("GOT_HELMET", 24, new int[] { 2, 7, 6, 3 }, 9);
-	public static ArmorMaterial HILLMEN = EnumHelper.addArmorMaterial("GOT_HILLMEN", 15, new int[] { 2, 6, 5, 2 }, 9);
-	public static ArmorMaterial IBBEN = EnumHelper.addArmorMaterial("GOT_IBBEN", 15, new int[] { 2, 6, 5, 2 }, 9);
-	public static ArmorMaterial ICE = EnumHelper.addArmorMaterial("GOT_ICE", 24, new int[] { 2, 7, 6, 3 }, 9);
-	public static ArmorMaterial IRONBORN = EnumHelper.addArmorMaterial("GOT_IRONBORN", 15, new int[] { 2, 6, 5, 2 }, 9);
-	public static ArmorMaterial JOGOS = EnumHelper.addArmorMaterial("GOT_JOGOS", 15, new int[] { 2, 6, 5, 2 }, 9);
-	public static ArmorMaterial KAFTAN = EnumHelper.addArmorMaterial("GOT_KAFTAN", 5, new int[] { 1, 3, 2, 1 }, 15);
-	public static ArmorMaterial KINGSGUARD = EnumHelper.addArmorMaterial("GOT_KINGSGUARD", 24, new int[] { 2, 7, 6, 3 }, 9);
-	public static ArmorMaterial LHAZAR = EnumHelper.addArmorMaterial("GOT_LHAZAR", 5, new int[] { 1, 3, 2, 1 }, 15);
-	public static ArmorMaterial LHAZAR_LION = EnumHelper.addArmorMaterial("GOT_LHAZAR_LION", 5, new int[] { 1, 3, 2, 1 }, 15);
-	public static ArmorMaterial LORATH = EnumHelper.addArmorMaterial("GOT_LORATH", 15, new int[] { 2, 6, 5, 2 }, 9);
-	public static ArmorMaterial LYS = EnumHelper.addArmorMaterial("GOT_LYS", 15, new int[] { 2, 6, 5, 2 }, 9);
-	public static ArmorMaterial MOSSOVY = EnumHelper.addArmorMaterial("GOT_MOSSOVY", 15, new int[] { 2, 6, 5, 2 }, 9);
-	public static ArmorMaterial MYR = EnumHelper.addArmorMaterial("GOT_MYR", 15, new int[] { 2, 6, 5, 2 }, 9);
-	public static ArmorMaterial NORTH = EnumHelper.addArmorMaterial("GOT_NORTH", 15, new int[] { 2, 6, 5, 2 }, 9);
-	public static ArmorMaterial NORTHGUARD = EnumHelper.addArmorMaterial("GOT_NORTHGUARD", 24, new int[] { 2, 7, 6, 3 }, 9);
-	public static ArmorMaterial NORVOS = EnumHelper.addArmorMaterial("GOT_NORVOS", 15, new int[] { 2, 6, 5, 2 }, 9);
-	public static ArmorMaterial PENTOS = EnumHelper.addArmorMaterial("GOT_PENTOS", 15, new int[] { 2, 6, 5, 2 }, 9);
-	public static ArmorMaterial QARTH = EnumHelper.addArmorMaterial("GOT_QARTH", 15, new int[] { 2, 6, 5, 2 }, 9);
-	public static ArmorMaterial QOHOR = EnumHelper.addArmorMaterial("GOT_QOHOR", 15, new int[] { 2, 6, 5, 2 }, 9);
-	public static ArmorMaterial REACH = EnumHelper.addArmorMaterial("GOT_REACH", 15, new int[] { 2, 6, 5, 2 }, 9);
-	public static ArmorMaterial REACHGUARD = EnumHelper.addArmorMaterial("GOT_REACHGUARD", 24, new int[] { 2, 7, 6, 3 }, 9);
-	public static ArmorMaterial REDKING = EnumHelper.addArmorMaterial("GOT_REDKING", 24, new int[] { 2, 7, 6, 3 }, 9);
-	public static ArmorMaterial RENLY = EnumHelper.addArmorMaterial("GOT_RENLY", 24, new int[] { 2, 7, 6, 3 }, 9);
-	public static ArmorMaterial RIVERLANDS = EnumHelper.addArmorMaterial("GOT_RIVERLANDS", 15, new int[] { 2, 6, 5, 2 }, 9);
-	public static ArmorMaterial ROBES = EnumHelper.addArmorMaterial("GOT_ROBES", 5, new int[] { 1, 3, 2, 1 }, 15);
-	public static ArmorMaterial ROYCE = EnumHelper.addArmorMaterial("GOT_ROYCE", 24, new int[] { 2, 7, 6, 3 }, 9);
-	public static ArmorMaterial SOTHORYOS = EnumHelper.addArmorMaterial("GOT_SOTHORYOS", 15, new int[] { 2, 6, 5, 2 }, 9);
-	public static ArmorMaterial SOTHORYOS_GOLD = EnumHelper.addArmorMaterial("GOT_SOTHORYOS_GOLD", 7, new int[] { 2, 5, 3, 1 }, 25);
-	public static ArmorMaterial STORMLANDS = EnumHelper.addArmorMaterial("GOT_STORMLANDS", 15, new int[] { 2, 6, 5, 2 }, 9);
-	public static ArmorMaterial SUMMER = EnumHelper.addArmorMaterial("GOT_SUMMER", 15, new int[] { 2, 6, 5, 2 }, 9);
-	public static ArmorMaterial TARGARYEN = EnumHelper.addArmorMaterial("GOT_TARGARYEN", 24, new int[] { 2, 7, 6, 3 }, 9);
-	public static ArmorMaterial TYROSH = EnumHelper.addArmorMaterial("GOT_TYROSH", 15, new int[] { 2, 6, 5, 2 }, 9);
-	public static ArmorMaterial UNSULLIED = EnumHelper.addArmorMaterial("GOT_UNSULLIED", 24, new int[] { 2, 7, 6, 3 }, 9);
+	public static ArmorMaterial CROWNLANDS = EnumHelper.addArmorMaterial("GOT_CROWNLANDS", 20, new int[] { 2, 6, 5, 2 }, 9);
+	public static ArmorMaterial DORNE = EnumHelper.addArmorMaterial("GOT_DORNE", 20, new int[] { 2, 6, 5, 2 }, 9);
+	public static ArmorMaterial DOTHRAKI = EnumHelper.addArmorMaterial("GOT_DOTHRAKI", 10, new int[] { 1, 3, 2, 1 }, 15);
+	public static ArmorMaterial DRAGONSTONE = EnumHelper.addArmorMaterial("GOT_DRAGONSTONE", 20, new int[] { 2, 6, 5, 2 }, 9);
+	public static ArmorMaterial FUR = EnumHelper.addArmorMaterial("GOT_FUR", 10, new int[] { 1, 3, 2, 1 }, 15);
+	public static ArmorMaterial GEMSBOK = EnumHelper.addArmorMaterial("GOT_GEMSBOK", 10, new int[] { 1, 3, 2, 1 }, 15);
+	public static ArmorMaterial GHISCAR = EnumHelper.addArmorMaterial("GOT_GHISCAR", 20, new int[] { 2, 6, 5, 2 }, 9);
+	public static ArmorMaterial GIFT = EnumHelper.addArmorMaterial("GOT_GIFT", 20, new int[] { 2, 6, 5, 2 }, 9);
+	public static ArmorMaterial GOLDENCOMPANY = EnumHelper.addArmorMaterial("GOT_GOLDENCOMPANY", 20, new int[] { 2, 6, 5, 2 }, 9);
+	public static ArmorMaterial HAND = EnumHelper.addArmorMaterial("GOT_HAND", 25, new int[] { 1, 3, 2, 1 }, 15);
+	public static ArmorMaterial HELMET = EnumHelper.addArmorMaterial("GOT_HELMET", 25, new int[] { 2, 7, 6, 3 }, 9);
+	public static ArmorMaterial HILLMEN = EnumHelper.addArmorMaterial("GOT_HILLMEN", 20, new int[] { 2, 6, 5, 2 }, 9);
+	public static ArmorMaterial IBBEN = EnumHelper.addArmorMaterial("GOT_IBBEN", 20, new int[] { 2, 6, 5, 2 }, 9);
+	public static ArmorMaterial ICE = EnumHelper.addArmorMaterial("GOT_ICE", 25, new int[] { 2, 7, 6, 3 }, 9);
+	public static ArmorMaterial IRONBORN = EnumHelper.addArmorMaterial("GOT_IRONBORN", 20, new int[] { 2, 6, 5, 2 }, 9);
+	public static ArmorMaterial JOGOS = EnumHelper.addArmorMaterial("GOT_JOGOS", 20, new int[] { 2, 6, 5, 2 }, 9);
+	public static ArmorMaterial KAFTAN = EnumHelper.addArmorMaterial("GOT_KAFTAN", 10, new int[] { 1, 3, 2, 1 }, 15);
+	public static ArmorMaterial KINGSGUARD = EnumHelper.addArmorMaterial("GOT_KINGSGUARD", 25, new int[] { 2, 7, 6, 3 }, 9);
+	public static ArmorMaterial LHAZAR = EnumHelper.addArmorMaterial("GOT_LHAZAR", 10, new int[] { 1, 3, 2, 1 }, 15);
+	public static ArmorMaterial LHAZAR_LION = EnumHelper.addArmorMaterial("GOT_LHAZAR_LION", 10, new int[] { 1, 3, 2, 1 }, 15);
+	public static ArmorMaterial LORATH = EnumHelper.addArmorMaterial("GOT_LORATH", 20, new int[] { 2, 6, 5, 2 }, 9);
+	public static ArmorMaterial LYS = EnumHelper.addArmorMaterial("GOT_LYS", 20, new int[] { 2, 6, 5, 2 }, 9);
+	public static ArmorMaterial MOSSOVY = EnumHelper.addArmorMaterial("GOT_MOSSOVY", 20, new int[] { 2, 6, 5, 2 }, 9);
+	public static ArmorMaterial MYR = EnumHelper.addArmorMaterial("GOT_MYR", 20, new int[] { 2, 6, 5, 2 }, 9);
+	public static ArmorMaterial NORTH = EnumHelper.addArmorMaterial("GOT_NORTH", 20, new int[] { 2, 6, 5, 2 }, 9);
+	public static ArmorMaterial NORTHGUARD = EnumHelper.addArmorMaterial("GOT_NORTHGUARD", 25, new int[] { 2, 7, 6, 3 }, 9);
+	public static ArmorMaterial NORVOS = EnumHelper.addArmorMaterial("GOT_NORVOS", 20, new int[] { 2, 6, 5, 2 }, 9);
+	public static ArmorMaterial PENTOS = EnumHelper.addArmorMaterial("GOT_PENTOS", 20, new int[] { 2, 6, 5, 2 }, 9);
+	public static ArmorMaterial QARTH = EnumHelper.addArmorMaterial("GOT_QARTH", 20, new int[] { 2, 6, 5, 2 }, 9);
+	public static ArmorMaterial QOHOR = EnumHelper.addArmorMaterial("GOT_QOHOR", 20, new int[] { 2, 6, 5, 2 }, 9);
+	public static ArmorMaterial REACH = EnumHelper.addArmorMaterial("GOT_REACH", 20, new int[] { 2, 6, 5, 2 }, 9);
+	public static ArmorMaterial REACHGUARD = EnumHelper.addArmorMaterial("GOT_REACHGUARD", 25, new int[] { 2, 7, 6, 3 }, 9);
+	public static ArmorMaterial REDKING = EnumHelper.addArmorMaterial("GOT_REDKING", 25, new int[] { 2, 7, 6, 3 }, 9);
+	public static ArmorMaterial RENLY = EnumHelper.addArmorMaterial("GOT_RENLY", 25, new int[] { 2, 7, 6, 3 }, 9);
+	public static ArmorMaterial RIVERLANDS = EnumHelper.addArmorMaterial("GOT_RIVERLANDS", 20, new int[] { 2, 6, 5, 2 }, 9);
+	public static ArmorMaterial ROBES = EnumHelper.addArmorMaterial("GOT_ROBES", 10, new int[] { 1, 3, 2, 1 }, 15);
+	public static ArmorMaterial ROYCE = EnumHelper.addArmorMaterial("GOT_ROYCE", 25, new int[] { 2, 7, 6, 3 }, 9);
+	public static ArmorMaterial SOTHORYOS = EnumHelper.addArmorMaterial("GOT_SOTHORYOS", 20, new int[] { 2, 6, 5, 2 }, 9);
+	public static ArmorMaterial SOTHORYOS_GOLD = EnumHelper.addArmorMaterial("GOT_SOTHORYOS_GOLD", 13, new int[] { 2, 5, 3, 1 }, 25);
+	public static ArmorMaterial STORMLANDS = EnumHelper.addArmorMaterial("GOT_STORMLANDS", 20, new int[] { 2, 6, 5, 2 }, 9);
+	public static ArmorMaterial SUMMER = EnumHelper.addArmorMaterial("GOT_SUMMER", 20, new int[] { 2, 6, 5, 2 }, 9);
+	public static ArmorMaterial TARGARYEN = EnumHelper.addArmorMaterial("GOT_TARGARYEN", 25, new int[] { 2, 7, 6, 3 }, 9);
+	public static ArmorMaterial TYROSH = EnumHelper.addArmorMaterial("GOT_TYROSH", 20, new int[] { 2, 6, 5, 2 }, 9);
+	public static ArmorMaterial UNSULLIED = EnumHelper.addArmorMaterial("GOT_UNSULLIED", 25, new int[] { 2, 7, 6, 3 }, 9);
 	public static ArmorMaterial VALYRIAN_CHAINMAIL = EnumHelper.addArmorMaterial("GOT_VALYRIAN_CHAINMAIL", 33, new int[] { 3, 7, 5, 2 }, 13);
 	public static ArmorMaterial VALYRIAN = EnumHelper.addArmorMaterial("GOT_VALYRIAN", 33, new int[] { 3, 8, 6, 3 }, 10);
-	public static ArmorMaterial VOLANTIS = EnumHelper.addArmorMaterial("GOT_VOLANTIS", 15, new int[] { 2, 6, 5, 2 }, 9);
-	public static ArmorMaterial WESTERLANDS = EnumHelper.addArmorMaterial("GOT_WESTERLANDS", 15, new int[] { 2, 6, 5, 2 }, 9);
-	public static ArmorMaterial WESTERLANDSGUARD = EnumHelper.addArmorMaterial("GOT_WESTERLANDSGUARD", 24, new int[] { 2, 7, 6, 3 }, 9);
-	public static ArmorMaterial WESTKING = EnumHelper.addArmorMaterial("GOT_WESTKING", 24, new int[] { 2, 7, 6, 3 }, 9);
-	public static ArmorMaterial YITI = EnumHelper.addArmorMaterial("GOT_YITI", 15, new int[] { 2, 6, 5, 2 }, 9);
-	public static ArmorMaterial YITI_FRONTIER = EnumHelper.addArmorMaterial("GOT_YITI_FRONTIER", 24, new int[] { 2, 7, 6, 3 }, 9);
-	public static ArmorMaterial YITI_SAMURAI = EnumHelper.addArmorMaterial("GOT_YITI_SAMURAI", 24, new int[] { 2, 7, 6, 3 }, 9);
+	public static ArmorMaterial VOLANTIS = EnumHelper.addArmorMaterial("GOT_VOLANTIS", 20, new int[] { 2, 6, 5, 2 }, 9);
+	public static ArmorMaterial WESTERLANDS = EnumHelper.addArmorMaterial("GOT_WESTERLANDS", 20, new int[] { 2, 6, 5, 2 }, 9);
+	public static ArmorMaterial WESTERLANDSGUARD = EnumHelper.addArmorMaterial("GOT_WESTERLANDSGUARD", 25, new int[] { 2, 7, 6, 3 }, 9);
+	public static ArmorMaterial WESTKING = EnumHelper.addArmorMaterial("GOT_WESTKING", 25, new int[] { 2, 7, 6, 3 }, 9);
+	public static ArmorMaterial YITI = EnumHelper.addArmorMaterial("GOT_YITI", 20, new int[] { 2, 6, 5, 2 }, 9);
+	public static ArmorMaterial YITI_FRONTIER = EnumHelper.addArmorMaterial("GOT_YITI_FRONTIER", 25, new int[] { 2, 7, 6, 3 }, 9);
+	public static ArmorMaterial YITI_SAMURAI = EnumHelper.addArmorMaterial("GOT_YITI_SAMURAI", 25, new int[] { 2, 7, 6, 3 }, 9);
 
-	public static ToolMaterial BRONZE_TOOL = EnumHelper.addToolMaterial("GOT_BRONZE_TOOL", 2, 200, 5.0F, 1.5F, 10);
-	public static ToolMaterial COBALT_TOOL = EnumHelper.addToolMaterial("GOT_COBALT_TOOL", 3, 1561, 8.0F, 3.0F, 10);
-	public static ToolMaterial FLINT_TOOL = EnumHelper.addToolMaterial("GOT_FLINT_TOOL", 1, 131, 4.0F, 1.0F, 5);
-	public static ToolMaterial HORN_TOOL = EnumHelper.addToolMaterial("GOT_HORN_TOOL", 1, 131, 4.0F, 1.0F, 5);
-	public static ToolMaterial ICE_TOOL = EnumHelper.addToolMaterial("GOT_ICE_TOOL", 2, 250, 6.0F, 2.0F, 14);
-	public static ToolMaterial OBSIDIAN_TOOL = EnumHelper.addToolMaterial("GOT_OBSIDIAN_TOOL", 2, 250, 6.0F, 2.0F, 14);
-	public static ToolMaterial SILVER_TOOL = EnumHelper.addToolMaterial("GOT_SILVER_TOOL", 2, 250, 6.0F, 2.0F, 14);
-	public static ToolMaterial VALYRIAN_TOOL = EnumHelper.addToolMaterial("GOT_VALYRIAN_TOOL", 4, 2400, 9.0F, 5.0F, 8);
-	public static ToolMaterial ASSHAI_TOOL = EnumHelper.addToolMaterial("GOT_ASSHAI_TOOL", 2, 250, 6.0F, 2.0F, 14);
+	public static ToolMaterial BRONZE_TOOL = EnumHelper.addToolMaterial("GOT_BRONZE_TOOL", 2, 250, 5.0F, 1.5F, 10);
+	public static ToolMaterial COBALT_TOOL = EnumHelper.addToolMaterial("GOT_COBALT_TOOL", 3, 1500, 8.0F, 3.0F, 10);
+	public static ToolMaterial FLINT_TOOL = EnumHelper.addToolMaterial("GOT_FLINT_TOOL", 1, 200, 4.0F, 1.0F, 5);
+	public static ToolMaterial HORN_TOOL = EnumHelper.addToolMaterial("GOT_HORN_TOOL", 1, 200, 4.0F, 1.0F, 5);
+	public static ToolMaterial ICE_TOOL = EnumHelper.addToolMaterial("GOT_ICE_TOOL", 2, 450, 6.0F, 2.0F, 14);
+	public static ToolMaterial OBSIDIAN_TOOL = EnumHelper.addToolMaterial("GOT_OBSIDIAN_TOOL", 2, 450, 6.0F, 2.0F, 14);
+	public static ToolMaterial SILVER_TOOL = EnumHelper.addToolMaterial("GOT_SILVER_TOOL", 2, 450, 6.0F, 2.0F, 14);
+	public static ToolMaterial VALYRIAN_TOOL = EnumHelper.addToolMaterial("GOT_VALYRIAN_TOOL", 4, 2500, 9.0F, 5.0F, 8);
+	public static ToolMaterial ASSHAI_TOOL = EnumHelper.addToolMaterial("GOT_ASSHAI_TOOL", 2, 450, 6.0F, 2.0F, 14);
 
 	public static ItemArmor.ArmorMaterial getArmorMaterialByName(String name) {
 		return ItemArmor.ArmorMaterial.valueOf(name);
